--- a/test.css
+++ b/test.css
@@ -169,7 +169,7 @@
     margin:0;
 }
 
-.charsheet input[type="text"].p60{
+.charsheet input[type="text"].60p{
     width: 60%;
 }
 
@@ -797,8 +797,8 @@
 .charsheet .repcontainer[data-groupname="repeating_armors"] > .repitem input[type="text"].name{
     width: 150px;
 }
-.charsheet .repcontainer[data-groupname="repeating_weapons"] > .repitem input[type="number"].p40,
-.charsheet .repcontainer[data-groupname="repeating_armors"] > .repitem input[type="number"].p40{
+.charsheet .repcontainer[data-groupname="repeating_weapons"] > .repitem input[type="number"].40px,
+.charsheet .repcontainer[data-groupname="repeating_armors"] > .repitem input[type="number"].40px{
     width: 150px;
 }
 
@@ -1143,7 +1143,7 @@
 .charsheet .repcontainer[data-groupname="repeating_shipweapon"] > .repitem .weapon-grid{
     display: grid;
     grid-template-areas: "label value";
-    grid-template-columns: 1fr 3fr
+    grid-template-columns: 1fr 3fr;
 }
 
 .charsheet .repcontainer[data-groupname="repeating_shipweapon"] > .repitem .range {
@@ -1474,7 +1474,7 @@
 .charsheet .repcontainer[data-groupname="repeating_shipweapon"] > .repitem .weapon-grid{
     display: grid;
     grid-template-areas: "label value";
-    grid-template-columns: 1fr 3fr
+    grid-template-columns: 1fr 3fr;
 }
 
 .charsheet .repcontainer[data-groupname="repeating_shipweapon"] > .repitem .range {
@@ -1797,6 +1797,7 @@
 .charsheet .repcontainer[data-groupname="repeating_vehicleweapon"] > .repitem .weapon-info label{
     width: unset;
     margin: 5px 0px 0px 5px;
+    grid
 }
 
 .charsheet .repcontainer[data-groupname="repeating_vehicleweapon"] > .repitem .weapon-grid{
@@ -2075,3 +2076,17 @@
 .sheet-rolltemplate-black tr:nth-child(even) {
  background-color:#eee;
 }
+
+    © 2022 GitHub, Inc.
+
+    Terms
+    Privacy
+    Security
+    Status
+    Docs
+    Contact GitHub
+    Pricing
+    API
+    Training
+    Blog
+    About
